--- a/expensetrack/templates/index1.html
+++ b/expensetrack/templates/index1.html
@@ -80,6 +80,7 @@
                             <div class="form-group">
                                 <label>Year</label>
                                 <select class="form-control" name="year" required>
+                                    <option value="2021">2021</option>
                                     <option value="2020">2020</option>
                                     <option value="2019">2019</option>
                                     <option value="2018">2018</option>
