--- a/expensetrack/static/style1.css
+++ b/expensetrack/static/style1.css
@@ -215,9 +215,9 @@ em {
   width: 60px;
 }
 
-.theme-switch input {
+/* .theme-switch input {
   display: none;
-}
+} */
 
 .slider {
   background-color: #ccc;
