--- a/expensetrack/templates/index1.html
+++ b/expensetrack/templates/index1.html
@@ -21,7 +21,7 @@
     </br>
     <div class="theme-switch-wrapper" style="float: right">
         <label class="theme-switch" for="checkbox">
-            <input onclick="toggleTheme()" style="display: inline" type="checkbox" id="checkbox"/>
+            <input onclick="toggleTheme()" style="visibility: hidden" type="checkbox" id="checkbox"/>
             <div class="slider round"></div>
         </label>
         <em style="display: inline">Dark mode toggle!!</em>
