[UI]Toggle Text Changes

--- a/expensetrack/templates/index1.html
+++ b/expensetrack/templates/index1.html
@@ -24,7 +24,7 @@
             <input onclick="toggleTheme()" style="visibility: hidden" type="checkbox" id="checkbox"/>
             <div class="slider round"></div>
         </label>
-        <em style="display: inline">Dark mode toggle!!</em>
+        <em style="display: inline">Dark Mode Toggle</em>
     </div>
     <script src="{% static 'darkmode.js' %}"></script>
     </br>
